# raylib-platformer

./: .gitignore  CMakeLists.txt  README.md
docs/: todo.txt
game/: CMakeLists.txt
game/data/world/: level_01.wld
game/include/: application.h  assets.h  camera.h  commands.h  console.h  editor.h  general.h  input.h  menu.h  platformer.h  player.h  world.h
game/src/: application.cpp  assets.cpp  camera.cpp  commands.cpp  console.cpp  editor.cpp  general.cpp  input.cpp  main.cpp  menu.cpp  platformer.cpp  player.cpp  world.cpp
